Fixing the bug and missplace of the website on mobile phone

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,10 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .kontainer-logo-blend {
   position: relative;
   display: inline-flex;
